# mitra

./: .devenv.flake.nix  .editorconfig  .env  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FEDERATION.md  README.md  SECURITY.md  config.example.toml  config.example.yaml  config.yaml.example  config_dev.example.toml  config_dev.example.yaml  devenv.nix  docker-compose.yaml
apx_core/: Cargo.toml  README.md
apx_core/src/: ap_url.rs  caip10.rs  caip19.rs  crypto_ecdsa.rs  crypto_eddsa.rs  crypto_rsa.rs  did.rs  did_key.rs  did_pkh.rs  did_url.rs  eip191.rs  hashes.rs  hashlink.rs  http_digest.rs  http_types.rs  http_url.rs  http_utils.rs  jcs.rs  lib.rs  media_type.rs  minisign.rs  multibase.rs  multicodec.rs  multihash.rs  urls.rs
apx_core/src/crypto/: common.rs  ecdsa.rs  eddsa.rs  hashes.rs  mod.rs  rsa.rs
apx_core/src/http_signatures/: algorithms.rs  create.rs  mod.rs  verify.rs
apx_core/src/json_signatures/: create.rs  mod.rs  proofs.rs  verify.rs
apx_core/src/url/: ap_uri.rs  canonical.rs  common.rs  hostname.rs  http_uri.rs  http_url_whatwg.rs  mod.rs
apx_sdk/: CHANGELOG.md  Cargo.toml  README.md
apx_sdk/examples/: fep_ae97_client.rs  fep_ae97_server.rs
apx_sdk/src/: addresses.rs  agent.rs  authentication.rs  constants.rs  deliver.rs  deserialization.rs  fetch.rs  http_client.rs  http_server.rs  identifiers.rs  jrd.rs  lib.rs  ownership.rs  url.rs  utils.rs
mitra/: Cargo.toml
mitra-activitypub/: Cargo.toml
mitra-activitypub/src/: agent.rs  constants.rs  deliver.rs  fetch.rs  http_client.rs  jrd.rs  lib.rs  utils.rs
mitra-cli/: Cargo.toml
mitra-cli/src/: cli.rs  main.rs
mitra-config/: Cargo.toml
mitra-config/src/: authentication.rs  config.rs  federation.rs  lib.rs  limits.rs  loader.rs  registration.rs
mitra-json-signatures/: Cargo.toml
mitra-json-signatures/src/: create.rs  proofs.rs  verify.rs
mitra-services/: Cargo.toml
mitra-services/src/: lib.rs  media.rs
mitra-services/src/ethereum/: contracts.rs  erc721_metadata.rs  nft.rs  sync.rs
mitra-services/src/monero/: mod.rs
mitra-validators/: Cargo.toml
mitra-validators/src/: invoices.rs  lib.rs  media.rs  posts.rs  profiles.rs  tags.rs
mitra/src/: main.rs
mitra_activitypub/: Cargo.toml
mitra_activitypub/src/: agent.rs  authentication.rs  authority.rs  constants.rs  contexts.rs  deliverer.rs  did_url.rs  errors.rs  filter.rs  forwarder.rs  identifiers.rs  identity.rs  importers.rs  keys.rs  lib.rs  ownership.rs  queues.rs  url.rs  utils.rs  vocabulary.rs  webfinger.rs
mitra_activitypub/src/actors/: attachments.rs  builders.rs  handlers.rs  helpers.rs  keys.rs  mod.rs  types.rs
mitra_activitypub/src/adapters/: follow_requests.rs  mod.rs  posts.rs  users.rs
mitra_activitypub/src/builders/: accept_follow.rs  accept_offer.rs  add_context_activity.rs  bite.rs  (+28 more)
mitra_adapters/: Cargo.toml
mitra_adapters/src/: authority.rs  dynamic_config.rs  init.rs  lib.rs  logger.rs  media.rs  permissions.rs  posts.rs  profiles.rs  roles.rs
mitra_api/: Cargo.toml
mitra_api/src/: errors.rs  http.rs  lib.rs  media.rs  ratelimit.rs  server.rs  state.rs  templates.rs
mitra_cli/: Cargo.toml
mitra_cli/src/: cli.rs  main.rs
mitra_config/: Cargo.toml
mitra_config/src/: authentication.rs  blockchain.rs  config.rs  environment.rs  federation.rs  instance.rs  lib.rs  limits.rs  loader.rs  metrics.rs  retention.rs  software.rs
mitra_federation/: Cargo.toml  README.md
mitra_federation/src/: addresses.rs  agent.rs  authentication.rs  constants.rs  deliver.rs  deserialization.rs  fetch.rs  http_client.rs  http_server.rs  identifiers.rs  jrd.rs  lib.rs  url.rs  utils.rs
mitra_models/: Cargo.toml  build.rs
mitra_models/migrations/: V0057__caip122_nonce.sql  V0058__user_account__add_login_address_monero.sql  V0059__invoice__add_payout_tx_id.sql  V0062__user_account__add_ed25519_private_key.sql  V0063__post__add_is_pinned.sql  V0066__relationship__add_created_at.sql  V0067__relationship__fix_relationships.sql  V0068__invoice__remote.sql  V0069__subscription__recipient_id_actor_profile.sql  V0071__actor_profile__add_mention_policy.sql  V0072__media_attachment__change_description_type.sql  V0073__post_reaction__add_content.sql  V0074__notification__add_reaction_id.sql  V0075__subscription__chain_id_nullable.sql  V0076__actor_profile__acct_not_generated.sql  V0077__actor_profile__identity_key.sql  V0078__post_reaction__unique_with_content.sql  V0079__activitypub_object.sql  V0080__follow_request__has_deprecated_ap_id.sql  V0081__activitypub_object__add_profile_id.sql  V0082__actor_profile__add_user_id_fk.sql  V0083__portable_user_account.sql  V0084__activitypub_collection_item.sql  V0085__activitypub_object__add_post_id.sql  V0086__post__drop_token_id.sql  V0087__subscription__remove_ethereum.sql  V0088__bookmark.sql  V0089__bookmark__add_created_at.sql  V0090__custom_feed.sql  V0091__filter_rule.sql  V0092__media_attachment_add_url.sql  V0093__post__create_related_indexes.sql  V0094__oauth_token__add_token_digest.sql  V0095__media_attachment__add_digest.sql  V0096__conversation.sql  V0097__poll.sql  V0098__post__add_url.sql  V0099__poll_vote__add_object_id.sql  V0100__post_mention__add_id.sql  V0101__post__create_indices.sql  (+34 more)
mitra_models/src/: cleanup.rs  lib.rs  media.rs
mitra_services/: Cargo.toml
mitra_services/src/: media.rs
mitra_utils/: Cargo.toml
mitra_utils/src/: ap_url.rs  base64.rs  caip2.rs  crypto_ecdsa.rs  crypto_eddsa.rs  crypto_rsa.rs  currencies.rs  datetime.rs  did.rs  did_key.rs  did_pkh.rs  eip191.rs  files.rs  html.rs  http_digest.rs  http_url.rs  id.rs  identicons.rs  languages.rs  lib.rs  markdown.rs  minisign.rs  multibase.rs  multicodec.rs  passwords.rs  random.rs  sysinfo.rs  unicode.rs  urls.rs
mitra_validators/: Cargo.toml
mitra_validators/src/: accounts.rs  activitypub.rs  common.rs  custom_feeds.rs  emojis.rs  errors.rs  filter_rules.rs  groups.rs  lib.rs  media.rs  oauth.rs  polls.rs  posts.rs  profiles.rs  reactions.rs  tags.rs  users.rs
mitra_workers/: Cargo.toml
mitra_workers/src/: importer.rs  lib.rs  periodic_tasks.rs  workers.rs
(+566 files in other folders)
