[workspace]
members = [
  ".",
  "apx_core",
  "apx_sdk",
  "mitra_activitypub",
  "mitra_adapters",
  "mitra_cli",
  "mitra_config",
  "mitra_models",
  "mitra_services",
  "mitra_utils",
  "mitra_validators",
  "mitra_workers",
]
default-members = [
  ".",
  "apx_core",
  "apx_sdk",
  "mitra_activitypub",
  "mitra_adapters",
  "mitra_cli",
  "mitra_config",
  "mitra_models",
  "mitra_services",
  "mitra_utils",
  "mitra_validators",
  "mitra_workers",
]

[workspace.package]
version = "3.20.1"
license = "AGPL-3.0-only"

edition = "2021"
rust-version = "1.70.0"

[workspace.lints.rust]
# Lints from rust-2024-compatibility group
boxed_slice_into_iter = "warn"
dependency_on_unit_never_type_fallback = "warn"
deprecated_safe_2024 = "warn"
edition_2024_expr_fragment_specifier = "warn"
#if_let_rescope = "warn"
impl_trait_overcaptures = "warn"
keyword_idents_2024 = "warn"
#missing_unsafe_on_extern = "warn"
never_type_fallback_flowing_into_unsafe = "warn"
rust_2024_guarded_string_incompatible_syntax = "warn"
#rust_2024_incompatible_pat = "warn"
rust_2024_prelude_collisions = "warn"
static_mut_refs = "warn"
#tail_expr_drop_order = "warn"
unsafe_attr_outside_unsafe = "warn"
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
derive_partial_eq_without_eq = "allow"
len_zero = "allow"
let_and_return = "allow"
map_entry = "allow"
or_fun_call = "allow"
redundant_field_names = "allow"
unused_unit = "allow"
enum_variant_names = "allow"
format_push_string = "allow"
unwrap_or_default = "allow"
large_enum_variant = "allow"

implicit_clone = "warn"
needless_pass_by_ref_mut = "warn"
semicolon_if_nothing_returned = "warn"
string_to_string = "warn"
unused_async = "warn"
unwrap_used = "warn"

[package]
name = "mitra"
description = "Federated micro-blogging platform and content subscription service"
version.workspace = true
license.workspace = true

edition.workspace = true
rust-version.workspace = true

publish = false
default-run = "mitra"

[dependencies]
# Used to handle incoming HTTP requests
actix-cors = "0.6.5"
actix-files = "0.6.5"
actix-governor = "0.6.0"
actix-multipart = { version = "0.6.1", default-features = false, features = ["derive"] }
actix-web = "4.4.1"
actix-web-httpauth = "0.8.1"
# Used for working with dates
chrono = { version = "0.4.31", default-features = false, features = ["std", "serde"] }
# Used to parse emoji shortcodes
emojis = "0.6.1"
# Used to work with hexadecimal strings
hex = { version = "0.4.3" }
# Provides order-preserving map
indexmap = "2.2.3"
# Used for logging
log = "0.4.20"
# Used to determine the number of CPUs on the system
num_cpus = "1.13.0"
# Used for working with regular expressions
regex = "1.10.6"
# Used for serialization/deserialization
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.89"
# Used to parse querystrings
serde_qs = { version = "0.13", features = ["actix4"] }
# Used for creating error types
thiserror = "1.0.37"
# Async runtime
tokio = { version = "~1.30.0", features = ["macros"] }
# Used to work with URLs
url = "2.4.1"
# Used to work with UUIDs
uuid = { version = "1.1.2", features = ["serde", "v4"] }

apx_core = { path = "apx_core" }
apx_sdk = { path = "apx_sdk" }
mitra_activitypub = { path = "mitra_activitypub" }
mitra_adapters = { path = "mitra_adapters" }
mitra_config = { path = "mitra_config" }
mitra_models = { path = "mitra_models" }
mitra_services = { path = "mitra_services" }
mitra_utils = { path = "mitra_utils" }
mitra_validators = { path = "mitra_validators" }
mitra_workers = { path = "mitra_workers" }

[dev-dependencies]
serial_test = "2.0.0"

apx_core = { path = "apx_core", features = ["test-utils"] }
mitra_config = { path = "mitra_config", features = ["test-utils"] }
mitra_models = { path = "mitra_models", features = ["test-utils"] }
mitra_services = { path = "mitra_services", features = ["test-utils"] }

[features]
production = ["mitra_config/production"]

[lints]
workspace = true
