[workspace]
members = [
  "apx_core",
  "apx_sdk",
  "mitra_activitypub",
  "mitra_adapters",
  "mitra_api",
  "mitra_cli",
  "mitra_config",
  "mitra_models",
  "mitra_services",
  "mitra_utils",
  "mitra_validators",
  "mitra_workers",
]
default-members = [
  ".",
  "apx_core",
  "apx_sdk",
  "mitra_activitypub",
  "mitra_adapters",
  "mitra_api",
  "mitra_cli",
  "mitra_config",
  "mitra_models",
  "mitra_services",
  "mitra_utils",
  "mitra_validators",
  "mitra_workers",
]

resolver = "2"

[workspace.package]
version = "4.14.0"
license = "AGPL-3.0-only"

edition = "2021"
rust-version = "1.75.0"

publish = false

[workspace.lints.rust]
# Lints from rust-2024-compatibility group
boxed_slice_into_iter = "warn"
dependency_on_unit_never_type_fallback = "warn"
deprecated_safe_2024 = "warn"
edition_2024_expr_fragment_specifier = "allow"
#if_let_rescope = "warn"
impl_trait_overcaptures = "warn"
keyword_idents_2024 = "warn"
#missing_unsafe_on_extern = "warn"
never_type_fallback_flowing_into_unsafe = "warn"
rust_2024_guarded_string_incompatible_syntax = "warn"
rust_2024_incompatible_pat = "warn"
rust_2024_prelude_collisions = "warn"
static_mut_refs = "warn"
#tail_expr_drop_order = "warn"
unsafe_attr_outside_unsafe = "warn"
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
derivable_impls = "allow"
derive_partial_eq_without_eq = "allow"
len_zero = "allow"
let_and_return = "allow"
map_entry = "allow"
or_fun_call = "allow"
redundant_field_names = "allow"
unused_unit = "allow"
enum_variant_names = "allow"
format_push_string = "allow"
unwrap_or_default = "allow"
uninlined_format_args = "allow"
large_enum_variant = "allow"

implicit_clone = "warn"
needless_pass_by_ref_mut = "warn"
semicolon_if_nothing_returned = "warn"
significant_drop_in_scrutinee = "warn"
unused_async = "warn"
unwrap_used = "warn"
