[workspace]
members = [
  "apx_core",
  "apx_sdk",
  "mitra",
  "mitra_activitypub",
  "mitra_adapters",
  "mitra_api",
  "mitra_cli",
  "mitra_config",
  "mitra_models",
  "mitra_services",
  "mitra_utils",
  "mitra_validators",
  "mitra_workers",
]
default-members = [
  ".",
  "apx_core",
  "apx_sdk",
  "mitra",
  "mitra_activitypub",
  "mitra_adapters",
  "mitra_api",
  "mitra_cli",
  "mitra_config",
  "mitra_models",
  "mitra_services",
  "mitra_utils",
  "mitra_validators",
  "mitra_workers",
]

resolver = "2"

[workspace.package]
version = "5.7.0"
license = "AGPL-3.0-only"

edition = "2024"
rust-version = "1.85.0"

publish = false

[workspace.lints.clippy]
derivable_impls = "allow"
derive_partial_eq_without_eq = "allow"
len_zero = "allow"
let_and_return = "allow"
map_entry = "allow"
or_fun_call = "allow"
redundant_field_names = "allow"
unused_unit = "allow"
enum_variant_names = "allow"
format_push_string = "allow"
unwrap_or_default = "allow"
uninlined_format_args = "allow"
large_enum_variant = "allow"

implicit_clone = "warn"
needless_pass_by_ref_mut = "warn"
semicolon_if_nothing_returned = "warn"
significant_drop_in_scrutinee = "warn"
unused_async = "warn"
unwrap_used = "warn"

[workspace.metadata.typos.default]
extend-ignore-re = [
    "-{5}BEGIN RSA PUBLIC KEY-{5}($|[^-]+-{5}END)",
    "did:key:\\w+",
    # Multiformats
    "zQm\\w+",
    "z2H\\w+",
    "ueWVzIG1hbmkgIQ",
]
extend-ignore-identifiers-re = [
    "^inport$",
    # OAuth tokens
    "^Vx88sC",
    # Monero addresses
    "^888tNk",
    "^9uyhAg",
]
