[package]
name = "apx_core"
description = "APx core primitives"
version = "0.6.0"
license.workspace = true

edition.workspace = true
rust-version.workspace = true

[dependencies]
# Used for working with RSA keys, HTTP signatures
base64_ext = { package = "base64", version = "0.21.4" }
# Used to verify minisign signatures
blake2 = "0.10.5"
# Used to decode base58btc
bs58 = "0.4.0"
# Used for working with dates
chrono = { version = "0.4.31", default-features = false, features = ["std", "serde", "clock"] }
# Used for working with EdDSA signatures
ed25519-dalek = { version = "2.0.0", features = ["pem", "pkcs8", "rand_core"] }
# Used to work with hexadecimal strings
hex = "0.4.3"
# Used for verifying HTTP signatures
http_0_2 = { package = "http", version = "0.2.9" }
http = "1.1.0"
# Used for working with IDNs
idna = "1.0.0"
# Choose unicode backend for idna
# https://github.com/hsivonen/idna_adapter
idna_adapter = "=1.1.0"
# Used to guess media type of a file
infer = "0.13.0"
# Used for working with URIs
iri-string = { version = "0.7.6", features = ["serde"] }
# Used for working with ECDSA signatures
k256 = { version = "0.13.0", default-features = false, features = ["std", "ecdsa"] }
# Used to generate random numbers
rand = "0.8.4"
# Used for working with regular expressions
regex = "1.10.6"
# Used for working with RSA keys
rsa = "0.9.2"
pem = "2.0.1"
# Used for serialization/deserialization
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.89"
# Used to create JCS representations
serde_json_canonicalizer = "0.2.0"
# Used to calculate SHA2 hashes
sha2 = { version = "0.10.6", features = ["oid"] }
# Used to calculate keccak-256 hashes
sha3 = "0.10.6"
# Used for creating error types
thiserror = "1.0.37"
# Used for multicodec implementation
unsigned-varint = "0.7.1"
# Used to work with URLs
url = "2.5.0"
percent-encoding = "*"

[features]
test-utils = ["rand/small_rng"]

[lints]
workspace = true
