[package]
name = "apx_sdk"
description = "Minimalistic ActivityPub toolkit"
version = "0.13.0"
license.workspace = true

edition.workspace = true
rust-version.workspace = true

[dependencies]
# Used for implementing custom DNS resolver
futures-util = { version = "0.3.28", default-features = false }
hyper-util = { version = "0.1.3", default-features = false }
tower-service = { version = "0.3.1", default-features = false }
# Used for working with regular expressions
regex = "1.10.6"
# Used for making async HTTP requests
reqwest = { version = "0.12.0,<0.12.5", default-features = false, features = ["json", "socks"] }
bytes = "1.2.0"
# Used for serialization/deserialization
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.89"
# Used for creating error types
thiserror = "1.0.37"

apx_core = { path = "../apx_core" }

[dev-dependencies]
# Actix server for examples
actix-web = "4.7.0"
# Async runtime for examples
tokio = { version = "1.38.0", features = ["macros", "rt"] }

[features]
default = ["rustls-tls"]

native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls-native-roots"]

test-utils = ["apx_core/test-utils"]

[lints]
workspace = true
