[package]
name = "mitra-activitypub"
version = "2.4.0"
license = "AGPL-3.0-only"
edition = "2021"
rust-version = "1.60"

[dependencies]
# Used for making async HTTP requests
reqwest = { version = "0.11.13", default-features = false, features = ["json", "socks"] }
bytes = "=1.2.0"
# Used for serialization/deserialization
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.89"
# Used for creating error types
thiserror = "1.0.37"

mitra-utils = { path = "../mitra-utils" }
