[package]
name = "mitra-cli"
version = "2.3.0"
license = "AGPL-3.0-only"
edition = "2021"
rust-version = "1.57"

[[bin]]
name = "mitractl"
path = "src/main.rs"

[dependencies]
# Used for catching errors
anyhow = "1.0.58"
# Used to build admin CLI tool
clap = { version = "3.2.18", default-features = false, features = ["std", "derive"] }
# Used for logging
log = "0.4.14"
# Used for reading JSON
serde_json = "1.0.89"
# Async runtime
tokio = { version = "1.28.2", features = ["macros"] }
# Used to work with UUIDs
uuid = "1.1.2"

mitra-config = { path = "../mitra-config" }
mitra-models = { path = "../mitra-models" }
mitra-services = { path = "../mitra-services" }
mitra-utils = { path = "../mitra-utils" }
mitra-validators = { path = "../mitra-validators" }
mitra = { path = ".." }
