[package]
name = "mitra-config"
version = "2.6.0"
license = "AGPL-3.0-only"
edition = "2021"
rust-version = "1.60"

[dependencies]
mitra-utils = { path = "../mitra-utils" }

# Used to read .env files
dotenvy = ">=0.15.0, <0.15.7"
# Used for logging
log = { version = "0.4.14", features = ["serde"] }
# Used for working with regular expressions
regex = "1.8.4"
# Used for serialization/deserialization
serde = { version = "1.0.136", features = ["derive"] }
# Used to parse config file
serde_yaml = "0.8.17"
# Used for creating error types
thiserror = "1.0.37"

[features]
production = []
test-utils = []
