[package]
name = "mitra-json-signatures"
version = "1.30.0"
license = "AGPL-3.0-only"
edition = "2021"
rust-version = "1.57"

[dependencies]
mitra-utils = { path = "../mitra-utils" }

# Used for working with dates
chrono = { version = "0.4.23", default-features = false, features = ["std", "serde"] }
# Used for serialization/deserialization
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.89"
# Used to calculate SHA2 hashes
sha2 = "0.10.6"
# Used for creating error types
thiserror = "1.0.37"
# Used to work with URLs
url = "2.2.2"

[features]
test-utils = []
