[package]
name = "mitra-validators"
version = "2.3.0"
license = "AGPL-3.0-only"
edition = "2021"
rust-version = "1.59"

[dependencies]
# Used for working with regular expressions
regex = "1.6.0"
# Used for creating error types
thiserror = "1.0.37"
# Used to work with UUIDs
uuid = { version = "1.1.2", features = ["serde", "v4"] }

mitra-models = { path = "../mitra-models" }
mitra-utils = { path = "../mitra-utils" }
