[package]
name = "mitra"
version.workspace = true
license.workspace = true

edition.workspace = true
rust-version.workspace = true

publish.workspace = true

[dependencies]
# Used for catching errors
anyhow = "1.0.58"
# Used to build admin CLI tool
clap = { version = "~4.4.18", default-features = false, features = ["std", "derive", "error-context", "help", "usage"] }
# Used for logging
log = "0.4.20"
# Async runtime
tokio = { version = "~1.42.0", features = ["macros", "rt-multi-thread"] }

mitra_adapters = { path = "../mitra_adapters" }
mitra_api = { path = "../mitra_api" }
mitra_config = { path = "../mitra_config" }
mitra_cli = { path = "../mitra_cli" }
mitra_workers = { path = "../mitra_workers" }

[lints]
workspace = true
