[package]
name = "mitra_activitypub"
version = "2.22.0"
license = "AGPL-3.0-only"
edition = "2021"
rust-version = "1.63.0"

[dependencies]
# Used for working with dates
chrono = { version = "0.4.23", default-features = false, features = ["std", "serde"] }
# Used for working with futures
futures = "0.3.13"
# Used to work with hexadecimal strings
hex = { version = "0.4.3" }
# Used for logging
log = "0.4.20"
# Used for working with regular expressions
regex = "1.9.6"
# Used for serialization/deserialization
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.89"
# Used for creating error types
thiserror = "1.0.37"
# Async runtime
tokio = { version = "1.28.2" }
# Used to work with UUIDs
uuid = { version = "1.1.2" }

mitra_adapters = { path = "../mitra_adapters", default-features = false }
mitra_config = { path = "../mitra_config" }
mitra_federation = { path = "../mitra_federation", default-features = false }
mitra_models = { path = "../mitra_models", default-features = false }
mitra_services = { path = "../mitra_services", default-features = false }
mitra_utils = { path = "../mitra_utils" }
mitra_validators = { path = "../mitra_validators" }

[dev-dependencies]
mitra_config = { path = "../mitra_config", features = ["test-utils"] }
mitra_models = { path = "../mitra_models", default-features = false, features = ["test-utils"] }
mitra_utils = { path = "../mitra_utils", features = ["test-utils"] }

[features]
default = ["rustls-tls"]

native-tls = [
  "mitra_adapters/native-tls",
  "mitra_federation/native-tls",
  "mitra_models/native-tls",
  "mitra_services/native-tls",
]
rustls-tls = [
  "mitra_adapters/rustls-tls",
  "mitra_federation/rustls-tls",
  "mitra_models/rustls-tls",
  "mitra_services/rustls-tls",
]

[lints]
workspace = true
