[package]
name = "mitra_activitypub"
version.workspace = true
license.workspace = true

edition.workspace = true
rust-version.workspace = true

[dependencies]
# Used for working with dates
chrono = { version = "0.4.31", default-features = false, features = ["std", "serde"] }
# Used for working with futures
futures = "0.3.13"
# Used to work with hexadecimal strings
hex = { version = "0.4.3" }
# Used to build @context
indexmap = { version = "2.2.3", features = ["serde"] }
# Used for logging
log = "0.4.20"
# Used for working with regular expressions
regex = "1.10.6"
# Used for serialization/deserialization
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.89"
# Used for creating error types
thiserror = "1.0.37"
# Async runtime
tokio = { version = "1.28.2" }
# Used to work with UUIDs
uuid = { version = "1.1.2" }
# User for working with block/allow lists
wildmatch = "2.1.1"

apx_core = { path = "../apx_core" }
apx_sdk = { path = "../apx_sdk" }
mitra_adapters = { path = "../mitra_adapters" }
mitra_config = { path = "../mitra_config" }
mitra_models = { path = "../mitra_models" }
mitra_services = { path = "../mitra_services" }
mitra_utils = { path = "../mitra_utils" }
mitra_validators = { path = "../mitra_validators" }

[dev-dependencies]
serial_test = "1.0.0"

apx_core = { path = "../apx_core", features = ["test-utils"] }
mitra_config = { path = "../mitra_config", features = ["test-utils"] }
mitra_models = { path = "../mitra_models", features = ["test-utils"] }

[lints]
workspace = true
