[package]
name = "mitra_adapters"
version = "2.10.0"
license = "AGPL-3.0-only"
edition = "2021"
rust-version = "1.63.0"

[dependencies]
# Used for logging
log = "0.4.14"
# Used for working with JSON
serde_json = "1.0.89"

mitra_config = { path = "../mitra_config" }
mitra_models = { path = "../mitra_models" }
mitra_services = { path = "../mitra_services" }
mitra_validators = { path = "../mitra_validators" }
