[package]
name = "mitra_adapters"
version = "2.18.0"
license = "AGPL-3.0-only"
edition = "2021"
rust-version = "1.63.0"

[dependencies]
# Used for working with dates
chrono = { version = "0.4.23", default-features = false }
# Used for logging
log = "0.4.20"
env_logger = { version = "0.9.0", default-features = false }
# Used for working with JSON
serde_json = "1.0.89"
# Async runtime
tokio = { version = "1.28.2", features = ["macros"] }
# Used to work with UUIDs
uuid = "1.1.2"

mitra_config = { path = "../mitra_config" }
mitra_models = { path = "../mitra_models" }
mitra_services = { path = "../mitra_services" }
mitra_utils = { path = "../mitra_utils" }
mitra_validators = { path = "../mitra_validators" }

[dev-dependencies]
serial_test = "0.7.0"

mitra_models = { path = "../mitra_models", features = ["test-utils"] }
mitra_utils = { path = "../mitra_utils", features = ["test-utils"] }

[target.'cfg(target_env = "musl")'.dependencies]
openssl = { version = "0.10.63", features = ["vendored"] }
openssl-probe = "0.1.5"
