[package]
name = "mitra_adapters"
version.workspace = true
license.workspace = true

edition.workspace = true
rust-version.workspace = true

[dependencies]
# Used for working with dates
chrono = { version = "0.4.31", default-features = false }
# Used for logging
log = "0.4.20"
env_logger = { version = "0.9.0", default-features = false }
# Used for working with JSON
serde_json = "1.0.89"
# Async runtime
tokio = { version = "1.32.1", features = ["macros"] }
# Used to work with UUIDs
uuid = "1.1.2"

apx_core = { path = "../apx_core" }
mitra_config = { path = "../mitra_config" }
mitra_models = { path = "../mitra_models" }
mitra_services = { path = "../mitra_services" }
mitra_utils = { path = "../mitra_utils" }
mitra_validators = { path = "../mitra_validators" }

[dev-dependencies]
serial_test = "2.0.0"

apx_core = { path = "../apx_core", features = ["test-utils"] }
mitra_config = { path = "../mitra_config", features = ["test-utils"] }
mitra_models = { path = "../mitra_models", features = ["test-utils"] }

[lints]
workspace = true
