[package]
name = "mitra_cli"
version = "2.23.0"
license = "AGPL-3.0-only"
edition = "2021"
rust-version = "1.63.0"

[[bin]]
name = "mitractl"
path = "src/main.rs"

[dependencies]
# Used for catching errors
anyhow = "1.0.58"
# Used to build admin CLI tool
clap = { version = "~4.0.32", default-features = false, features = ["std", "derive", "error-context", "help", "usage"] }
clap_lex = "0.3.0, <0.3.1"
# Used for reading JSON
serde_json = "1.0.89"
# Async runtime
tokio = { version = "1.28.2", features = ["macros"] }
# Used to work with UUIDs
uuid = "1.1.2"

mitra_activitypub = { path = "../mitra_activitypub", default-features = false }
mitra_adapters = { path = "../mitra_adapters", default-features = false }
mitra_config = { path = "../mitra_config" }
mitra_federation = { path = "../mitra_federation", default-features = false }
mitra_models = { path = "../mitra_models", default-features = false }
mitra_services = { path = "../mitra_services", default-features = false }
mitra_utils = { path = "../mitra_utils" }
mitra_validators = { path = "../mitra_validators" }
mitra = { path = "..", default-features = false }

[features]
default = ["rustls-tls"]

native-tls = [
  "mitra/native-tls",
  "mitra_activitypub/native-tls",
  "mitra_adapters/native-tls",
  "mitra_federation/native-tls",
  "mitra_models/native-tls",
  "mitra_services/native-tls",
]
rustls-tls = [
  "mitra/rustls-tls",
  "mitra_activitypub/rustls-tls",
  "mitra_adapters/rustls-tls",
  "mitra_federation/rustls-tls",
  "mitra_models/rustls-tls",
  "mitra_services/rustls-tls",
]

[lints]
workspace = true
