[package]
name = "mitra_cli"
version.workspace = true
license.workspace = true

edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "mitractl"
path = "src/main.rs"

[dependencies]
# Used for catching errors
anyhow = "1.0.58"
# Used to build admin CLI tool
clap = { version = "~4.3.24", default-features = false, features = ["std", "derive", "error-context", "help", "usage"] }
# Used for logging
log = "0.4.20"
# Used for reading JSON
serde_json = "1.0.89"
# Async runtime
tokio = { version = "1.32.1", features = ["macros"] }
# Used to work with UUIDs
uuid = "1.1.2"

apx_core = { path = "../apx_core" }
apx_sdk = { path = "../apx_sdk" }
mitra_activitypub = { path = "../mitra_activitypub" }
mitra_adapters = { path = "../mitra_adapters" }
mitra_config = { path = "../mitra_config" }
mitra_models = { path = "../mitra_models" }
mitra_services = { path = "../mitra_services" }
mitra_utils = { path = "../mitra_utils" }
mitra_validators = { path = "../mitra_validators" }
mitra = { path = ".." }

[lints]
workspace = true
