[package]
name = "mitra_config"
version.workspace = true
license.workspace = true

edition.workspace = true
rust-version.workspace = true

[dependencies]
# Used to read .env files
dotenvy = ">=0.15.0, <0.15.7"
# Used for logging
log = { version = "0.4.20", features = ["serde"] }
# Used for working with regular expressions
regex = "1.9.6"
# Used for serialization/deserialization
serde = { version = "1.0.136", features = ["derive"] }
# Used to parse config file
serde_yaml = "0.9.25"
# Used for creating error types
thiserror = "1.0.37"

apx_core = { path = "../apx_core" }
mitra_utils = { path = "../mitra_utils" }

[dev-dependencies]
apx_core = { path = "../apx_core", features = ["test-utils"] }

[features]
production = []
test-utils = []

[lints]
workspace = true
