[package]
name = "mitra_federation"
version = "2.7.1"
license = "AGPL-3.0-only"
edition = "2021"
rust-version = "1.60"

[dependencies]
# Used for logging
log = "0.4.14"
# Used for making async HTTP requests
reqwest = { version = "0.11.13", default-features = false, features = ["json", "socks"] }
bytes = "=1.2.0"
# Used for working with regular expressions
regex = "1.8.4"
# Used for serialization/deserialization
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.89"
# Used for creating error types
thiserror = "1.0.37"

mitra_utils = { path = "../mitra_utils" }
