[package]
name = "mitra_federation"
version = "2.14.0"
license = "AGPL-3.0-only"
edition = "2021"
rust-version = "1.63.0"

[dependencies]
# Used for working with HTTP headers
http = "0.2.9"
# Used for logging
log = "0.4.20"
# Used for working with regular expressions
regex = "1.9.6"
# Used for making async HTTP requests
reqwest = { version = "0.11.20", default-features = false, features = ["json", "socks"] }
bytes = "=1.2.0"
# Used for serialization/deserialization
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.89"
# Used for creating error types
thiserror = "1.0.37"

mitra_utils = { path = "../mitra_utils" }

[features]
default = ["native-tls"]

native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls-native-roots"]
