[package]
name = "mitra_models"
version = "2.22.0"
license = "AGPL-3.0-only"
edition = "2021"
rust-version = "1.63.0"

[dependencies]
# Used for working with dates
chrono = { version = "0.4.23", default-features = false, features = ["std", "serde"] }
# Used for pooling database connections
deadpool = "0.9.2"
deadpool-postgres = { version = "0.10.2", default-features = false }
# Used to work with hexadecimal strings
hex = { version = "0.4.3", features = ["serde"] }
# Used for logging
log = "0.4.20"
# Used for managing database migrations
refinery = { version = "0.8.4", features = ["tokio-postgres"] }
# Used for serialization/deserialization
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.89"
# Used for creating error types
thiserror = "1.0.37"
# Async runtime
tokio = { version = "1.28.2", features = [] }
# Used for working with Postgresql database
tokio-postgres = { version = "=0.7.7", features = ["array-impls", "with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
postgres-types = { version = "=0.2.4", features = ["derive", "with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
postgres-protocol = "0.6.4"
# Used to construct PostgreSQL queries
postgres_query = { git = "https://github.com/nolanderc/rust-postgres-query", rev = "b4422051c8a31fbba4a35f88004c1cefb1878dd5" }
postgres_query_macro = { git = "https://github.com/nolanderc/rust-postgres-query", rev = "b4422051c8a31fbba4a35f88004c1cefb1878dd5" }
# Used to work with UUIDs
uuid = { version = "1.1.2", features = ["serde", "v4"] }

mitra_utils = { path = "../mitra_utils" }

# Required by rustls-tls feature
rustls = { version = "0.21", optional = true }
rustls-pemfile = { version = "1.0.4", optional = true }
tokio-postgres-rustls = { version = "0.10.0", optional = true }

# Required by native-tls feature
openssl = { version = "0.10.63", optional = true }
postgres-openssl = { version = "0.5.0", optional = true }

[dev-dependencies]
serial_test = "0.7.0"

mitra_utils = { path = "../mitra_utils", features = ["test-utils"] }

[features]
default = ["rustls-tls"]

native-tls = ["openssl", "postgres-openssl"]
rustls-tls = ["rustls", "rustls-pemfile", "tokio-postgres-rustls"]

test-utils = []

[lints]
workspace = true
