[package]
name = "mitra_models"
version.workspace = true
license.workspace = true

edition.workspace = true
rust-version.workspace = true

[dependencies]
# Used for working with dates
chrono = { version = "0.4.31", default-features = false, features = ["std", "serde"] }
# Used for pooling database connections
deadpool = "0.9.2"
deadpool-postgres = { version = "0.10.2", default-features = false }
# Used to work with hexadecimal strings
hex = { version = "0.4.3", features = ["serde"] }
# Used for logging
log = "0.4.20"
# Used for managing database migrations
refinery = { version = "0.8.4", features = ["tokio-postgres"] }
# Used for serialization/deserialization
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.89"
# Used for creating error types
thiserror = "1.0.37"
# Async runtime
tokio = { version = "1.28.2", features = [] }
# Used for working with Postgresql database
tokio-postgres = { version = "=0.7.7", features = ["array-impls", "with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
postgres-types = { version = "=0.2.4", features = ["derive", "with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
postgres-protocol = "0.6.4"
# Used to construct PostgreSQL queries
postgres_query = { git = "https://github.com/nolanderc/rust-postgres-query", rev = "b4422051c8a31fbba4a35f88004c1cefb1878dd5" }
postgres_query_macro = { git = "https://github.com/nolanderc/rust-postgres-query", rev = "b4422051c8a31fbba4a35f88004c1cefb1878dd5" }
# Used for TLS connections
tokio-postgres-rustls = { version = "0.11.1" }
rustls = { version = "0.22" }
rustls-pemfile = { version = "2.1.3" }
# Used to work with UUIDs
uuid = { version = "1.1.2", features = ["serde", "v4"] }

apx_core = { path = "../apx_core" }
mitra_utils = { path = "../mitra_utils" }

[dev-dependencies]
serial_test = "1.0.0"

apx_core = { path = "../apx_core", features = ["test-utils"] }

[features]
test-utils = []

[lints]
workspace = true
